<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraint_network_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_network_error"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_network_error"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:padding="30dp"
        android:src="@drawable/ic_undraw_donut_love_kau1"
        app:layout_constraintTop_toBottomOf="@+id/guideline_network_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_network_error_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_access"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/iv_network_error"/>

    <TextView
        android:id="@+id/tv_network_error_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_try_again"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_network_error_title"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_network_error_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_network_error_try_again"/>

</androidx.constraintlayout.widget.ConstraintLayout>