<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/constraint_tv_show_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/network_error_layout"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_tv_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                android:id="@+id/carousel_layout_tvshow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/carousel_layout"/>

            <TextView
                android:id="@+id/tv_tvshow_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/upcoming"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintTop_toBottomOf="@+id/carousel_layout_tvshow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tvshow_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_tvshow_upcoming"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_cinema_list_layout"/>

            <TextView
                android:id="@+id/tv_tvshow_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/popular"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintTop_toBottomOf="@+id/rv_tvshow_upcoming"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tvshow_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_tvshow_popular"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_cinema_list_layout"/>

            <TextView
                android:id="@+id/tv_tvshow_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/top_rated"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintTop_toBottomOf="@+id/rv_tvshow_popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tvshow_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_tvshow_top_rated"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_cinema_list_layout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</ScrollView>